--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "gl-matrix": "^3.4.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "three": "^0.172.0",
     "version-8": "file:"
   }
